force-app/main/default/objects/Team_Member__c/Team_Member__c.object-meta.xml
<CustomObject>
    <label>Team Member</label>
    <nameField>
        <label>Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>