force-app/main/default/objects/Team_Member__c/fields/OT_Member__c.field-meta.xml
<CustomField>
    <fullName>OT_Member__c</fullName>
    <label>Opportunity Team Engine</label>
    <referenceTo>OT_Member__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>